src/objects/Contribution__c.object
<CustomObject>
    <fields>
        <fullName>Action_Item_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action Item</label>
        <referenceTo>Action_Item__c</referenceTo>
        <relationshipLabel>Contributions</relationshipLabel>
        <relationshipName>Contributions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Create</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Contributions History</relationshipLabel>
        <relationshipName>Contributions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contributed_By__c</fullName>
        <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp;  CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contributed By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contribution_Type__c</fullName>
        <label>Contribution Type</label>
        <picklist>
            <picklistValues>
                <fullName>Case Note</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supports and Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplies and Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Protocols and Safeguards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>List of Assessments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAP - Functional Domain Summaries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional Domain Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Alert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Milestone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Action Item</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Created_date__c</fullName>
        <formula>NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Individual_Name__c</fullName>
        <encrypted>true</encrypted>
        <label>Individual Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <encrypted>true</encrypted>
        <inlineHelpText>Organization field on Contact object
(associated with Created by User)</inlineHelpText>
        <label>Organization</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region field on Contact object (associated with Created by User)</description>
        <encrypted>true</encrypted>
        <label>Region</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restricted_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox; checked when a Case Note, Case Alert, Case Document has record type = restricted. Otherwise unchecked.</description>
        <label>Restricted Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Profile__c</fullName>
        <inlineHelpText>Profile field on User object
(associated with Created by User)</inlineHelpText>
        <label>User Profile</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Contribution</label>
    <nameField>
        <displayFormat>CN-{0000}</displayFormat>
        <label>Contribution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contributions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>